--- a/mysite/myapp/templates/index.html
+++ b/mysite/myapp/templates/index.html
@@ -2,11 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Document</title>
-    <link href="{% static 'style.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'style.css' %}" type="text/css" />
+    <link href="/static/style.css" type="text/css" />
     <style>
     body{
         color:red;
