--- a/mysite/myapp/templates/index.html
+++ b/mysite/myapp/templates/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>Document</title>
-    <link href="{% static 'style.css' %}" type="text/css" />
+    <link href="{% static 'style.css' %}" rel="stylesheet" type="text/css" />
     <link href="/static/style.css" type="text/css" />
     <style>
     body{
